rregadmin/registry/registry.h

/** Registry options.
 *
 * @ingroup registry_registry_group
 */
typedef enum
{
    /** Backup hives if they are going to be written over.
     */
    REG_OPT_BACKUP = 1 << 0,
    REG_OPT_CHECK_HIVES_READ = 1 << 1,
    REG_OPT_CHECK_HIVES_WRITE = 1 << 2,
    REG_OPT_CHECK_HIVES = REG_OPT_CHECK_HIVES_READ | REG_OPT_CHECK_HIVES_WRITE
} RegistryOption;
/** Set an option.
 *
 * @see RegistryOption
 *
 * @ingroup registry_registry_group
 */
gboolean registry_set_option(Registry *in_reg, RegistryOption in_opt);
/** Unset an option.
 *
 * @see RegistryOption
 *
 * @ingroup registry_registry_group
 */
gboolean registry_unset_option(Registry *in_reg, RegistryOption in_opt);
/** Check if an option is set.
 *
 * @see RegistryOption
 *
 * @ingroup registry_registry_group
 */
gboolean registry_has_option(const Registry *in_reg, RegistryOption in_opt);
/** Get a RegistryKey from the registry key id.
 *
 * @ingroup registry_registry_group
 */
const RegistryKey *registry_get_registry_key(const Registry *in_reg,
                                             reg_id in_id);
/** Search for the registry key based on the path given.
 *
 * @ingroup registry_registry_group
 */
const RegistryKey *registry_find_registry_key(const Registry *in_reg,
                                              const char *in_path);
/** Is the path a key?
 *
 * @ingroup registry_registry_group
 */
gboolean registry_path_is_key(const Registry *in_reg, const char *in_path);
/** Get the KeyCell associated with the path.
 *
 * @ingroup registry_registry_group
 */
KeyCell* registry_path_get_key(const Registry *in_reg, const char *in_path);
/** Add a key.
 *
 * @ingroup registry_registry_group
 */
KeyCell* registry_path_add_key(const Registry *in_reg, const char *in_path);
/** Delete a key.
 *
 * @ingroup registry_registry_group
 */
gboolean registry_path_delete_key(const Registry *in_reg, const char *in_path);
/** Check to see if a key can be deleted.
 *
 * @ingroup registry_registry_group
 */
gboolean registry_path_is_deletable_key(const Registry *in_reg,
                                        const char *in_path);
/** Is the value name a value at path?
 *
 * @ingroup registry_registry_group
 */
gboolean registry_path_is_value(const Registry *in_reg,
                                const char *in_path,
                                const char *in_value_name);
/** Get ValueKeyCell associated with the value name at path.
 *
 * @ingroup registry_registry_group
 */
ValueKeyCell* registry_path_get_value(const Registry *in_reg,
                                      const char *in_path,
                                      const char *in_value_name);
/** Add a value.
 *
 * @ingroup registry_registry_group
 */
ValueKeyCell* registry_path_add_value(const Registry *in_reg,
                                      const char *in_path,
                                      const char *in_value_name,
                                      const Value *in_val);
/** Delete a value.
 *
 * @ingroup registry_registry_group
 */
gboolean registry_path_delete_value(const Registry *in_reg,
                                    const char *in_path,
                                    const char *in_value_name);
/** Get the number of hives loaded.
 *
 * @ingroup registry_registry_group
 */
gint registry_number_of_hives(const Registry *in_reg);
/** Has anything in the registry been modified?
 *
 * @ingroup registry_registry_group
 */
gboolean registry_is_dirty(const Registry *in_reg);
/** Set the registry as modified.
 *
 * @ingroup registry_registry_group
 */
gboolean registry_set_dirty(Registry *in_reg, gboolean in_value);
/** Get the hive_info struct from the hive_id.
 *
 * @ingroup registry_registry_group
 */
const hive_info* registry_get_hive_info(const Registry *in_reg, hive_id in_id);