python/rregadmin/registry/registry_wrapper.py


# values for enumeration 'RegistryOption'
REG_OPT_BACKUP = 1
REG_OPT_CHECK_HIVES_READ = 2
REG_OPT_CHECK_HIVES_WRITE = 4
REG_OPT_CHECK_HIVES = 6
RegistryOption = c_int # enum
# ../../../rregadmin/registry/registry.h 199
registry_set_option = _libraries['librregadmin.so.1'].registry_set_option
registry_set_option.restype = gboolean
# registry_set_option(in_reg, in_opt)
registry_set_option.argtypes = [POINTER(Registry), RegistryOption]
registry_set_option.__doc__ = \
"""gboolean registry_set_option(Registry * in_reg, RegistryOption in_opt)
../../../rregadmin/registry/registry.h:199"""
# ../../../rregadmin/registry/registry.h 207
registry_unset_option = _libraries['librregadmin.so.1'].registry_unset_option
registry_unset_option.restype = gboolean
# registry_unset_option(in_reg, in_opt)
registry_unset_option.argtypes = [POINTER(Registry), RegistryOption]
registry_unset_option.__doc__ = \
"""gboolean registry_unset_option(Registry * in_reg, RegistryOption in_opt)
../../../rregadmin/registry/registry.h:207"""
# ../../../rregadmin/registry/registry.h 215
registry_has_option = _libraries['librregadmin.so.1'].registry_has_option
registry_has_option.restype = gboolean
# registry_has_option(in_reg, in_opt)
registry_has_option.argtypes = [POINTER(Registry), RegistryOption]
registry_has_option.__doc__ = \
"""gboolean registry_has_option(unknown * in_reg, RegistryOption in_opt)
../../../rregadmin/registry/registry.h:215"""
# ../../../rregadmin/registry/registry.h 222
registry_get_registry_key = _libraries['librregadmin.so.1'].registry_get_registry_key
registry_get_registry_key.restype = POINTER(RegistryKey)
# registry_get_registry_key(in_reg, in_id)
registry_get_registry_key.argtypes = [POINTER(Registry), reg_id]
registry_get_registry_key.__doc__ = \
"""unknown * registry_get_registry_key(unknown * in_reg, reg_id in_id)
../../../rregadmin/registry/registry.h:222"""
# ../../../rregadmin/registry/registry.h 229
registry_find_registry_key = _libraries['librregadmin.so.1'].registry_find_registry_key
registry_find_registry_key.restype = POINTER(RegistryKey)
# registry_find_registry_key(in_reg, in_path)
registry_find_registry_key.argtypes = [POINTER(Registry), STRING]
registry_find_registry_key.__doc__ = \
"""unknown * registry_find_registry_key(unknown * in_reg, unknown * in_path)
../../../rregadmin/registry/registry.h:229"""
# ../../../rregadmin/registry/registry.h 235
registry_path_is_key = _libraries['librregadmin.so.1'].registry_path_is_key
registry_path_is_key.restype = gboolean
# registry_path_is_key(in_reg, in_path)
registry_path_is_key.argtypes = [POINTER(Registry), STRING]
registry_path_is_key.__doc__ = \
"""gboolean registry_path_is_key(unknown * in_reg, unknown * in_path)
../../../rregadmin/registry/registry.h:235"""
# ../../../rregadmin/registry/registry.h 241
registry_path_get_key = _libraries['librregadmin.so.1'].registry_path_get_key
registry_path_get_key.restype = POINTER(KeyCell)
# registry_path_get_key(in_reg, in_path)
registry_path_get_key.argtypes = [POINTER(Registry), STRING]
registry_path_get_key.__doc__ = \
"""KeyCell * registry_path_get_key(unknown * in_reg, unknown * in_path)
../../../rregadmin/registry/registry.h:241"""
# ../../../rregadmin/registry/registry.h 247
registry_path_add_key = _libraries['librregadmin.so.1'].registry_path_add_key
registry_path_add_key.restype = POINTER(KeyCell)
# registry_path_add_key(in_reg, in_path)
registry_path_add_key.argtypes = [POINTER(Registry), STRING]
registry_path_add_key.__doc__ = \
"""KeyCell * registry_path_add_key(unknown * in_reg, unknown * in_path)
../../../rregadmin/registry/registry.h:247"""
# ../../../rregadmin/registry/registry.h 253
registry_path_delete_key = _libraries['librregadmin.so.1'].registry_path_delete_key
registry_path_delete_key.restype = gboolean
# registry_path_delete_key(in_reg, in_path)
registry_path_delete_key.argtypes = [POINTER(Registry), STRING]
registry_path_delete_key.__doc__ = \
"""gboolean registry_path_delete_key(unknown * in_reg, unknown * in_path)
../../../rregadmin/registry/registry.h:253"""
# ../../../rregadmin/registry/registry.h 260
registry_path_is_deletable_key = _libraries['librregadmin.so.1'].registry_path_is_deletable_key
registry_path_is_deletable_key.restype = gboolean
# registry_path_is_deletable_key(in_reg, in_path)
registry_path_is_deletable_key.argtypes = [POINTER(Registry), STRING]
registry_path_is_deletable_key.__doc__ = \
"""gboolean registry_path_is_deletable_key(unknown * in_reg, unknown * in_path)
../../../rregadmin/registry/registry.h:260"""
# ../../../rregadmin/registry/registry.h 268
registry_path_is_value = _libraries['librregadmin.so.1'].registry_path_is_value
registry_path_is_value.restype = gboolean
# registry_path_is_value(in_reg, in_path, in_value_name)
registry_path_is_value.argtypes = [POINTER(Registry), STRING, STRING]
registry_path_is_value.__doc__ = \
"""gboolean registry_path_is_value(unknown * in_reg, unknown * in_path, unknown * in_value_name)
../../../rregadmin/registry/registry.h:268"""
# ../../../rregadmin/registry/registry.h 276
registry_path_get_value = _libraries['librregadmin.so.1'].registry_path_get_value
registry_path_get_value.restype = POINTER(ValueKeyCell)
# registry_path_get_value(in_reg, in_path, in_value_name)
registry_path_get_value.argtypes = [POINTER(Registry), STRING, STRING]
registry_path_get_value.__doc__ = \
"""ValueKeyCell * registry_path_get_value(unknown * in_reg, unknown * in_path, unknown * in_value_name)
../../../rregadmin/registry/registry.h:276"""
# ../../../rregadmin/registry/registry.h 285
registry_path_add_value = _libraries['librregadmin.so.1'].registry_path_add_value
registry_path_add_value.restype = POINTER(ValueKeyCell)
# registry_path_add_value(in_reg, in_path, in_value_name, in_val)
registry_path_add_value.argtypes = [POINTER(Registry), STRING, STRING, POINTER(Value)]
registry_path_add_value.__doc__ = \
"""ValueKeyCell * registry_path_add_value(unknown * in_reg, unknown * in_path, unknown * in_value_name, unknown * in_val)
../../../rregadmin/registry/registry.h:285"""
# ../../../rregadmin/registry/registry.h 293
registry_path_delete_value = _libraries['librregadmin.so.1'].registry_path_delete_value
registry_path_delete_value.restype = gboolean
# registry_path_delete_value(in_reg, in_path, in_value_name)
registry_path_delete_value.argtypes = [POINTER(Registry), STRING, STRING]
registry_path_delete_value.__doc__ = \
"""gboolean registry_path_delete_value(unknown * in_reg, unknown * in_path, unknown * in_value_name)
../../../rregadmin/registry/registry.h:293"""
# ../../../rregadmin/registry/registry.h 299
registry_number_of_hives = _libraries['librregadmin.so.1'].registry_number_of_hives
registry_number_of_hives.restype = gint
# registry_number_of_hives(in_reg)
registry_number_of_hives.argtypes = [POINTER(Registry)]
registry_number_of_hives.__doc__ = \
"""gint registry_number_of_hives(unknown * in_reg)
../../../rregadmin/registry/registry.h:299"""
# ../../../rregadmin/registry/registry.h 305
registry_is_dirty = _libraries['librregadmin.so.1'].registry_is_dirty
registry_is_dirty.restype = gboolean
# registry_is_dirty(in_reg)
registry_is_dirty.argtypes = [POINTER(Registry)]
registry_is_dirty.__doc__ = \
"""gboolean registry_is_dirty(unknown * in_reg)
../../../rregadmin/registry/registry.h:305"""
# ../../../rregadmin/registry/registry.h 311
registry_set_dirty = _libraries['librregadmin.so.1'].registry_set_dirty
registry_set_dirty.restype = gboolean
# registry_set_dirty(in_reg, in_value)
registry_set_dirty.argtypes = [POINTER(Registry), gboolean]
registry_set_dirty.__doc__ = \
"""gboolean registry_set_dirty(Registry * in_reg, gboolean in_value)
../../../rregadmin/registry/registry.h:311"""
# ../../../rregadmin/registry/registry.h 317
registry_get_hive_info = _libraries['librregadmin.so.1'].registry_get_hive_info
registry_get_hive_info.restype = POINTER(hive_info)
# registry_get_hive_info(in_reg, in_id)
registry_get_hive_info.argtypes = [POINTER(Registry), hive_id]
registry_get_hive_info.__doc__ = \
"""unknown * registry_get_hive_info(unknown * in_reg, hive_id in_id)
../../../rregadmin/registry/registry.h:317"""
